# 2023-MAI-ARCH-LAB4

./: .gitignore  CMakeLists.txt  README.md  database_init.sql  docker-compose.yml  helper.h  performance.md
account/: Dockerfile  main.cpp  user_handler.h
cart/: Dockerfile  cart_handler.h  main.cpp
catalog/: Dockerfile  main.cpp  product_handler.h
config/: config.cpp  config.h
database/: cache.cpp  cache.h  cart.cpp  cart.h  catalog.cpp  catalog.h  database.cpp  database.h  user.cpp  user.h
mariadb/proxysql/: proxysql.cnf
openapi/: account.yaml  cart.yaml  catalog.yaml
test/: get_cache.lua  get_no_cache.lua
web_server/: http_request_factory.h  http_web_server.h
